@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/iptables/Attic/iptables-1.2.9-r1.ebuild,v 1.7 2004/06/28 19:00:50 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/iptables/Attic/iptables-1.2.9-r1.ebuild,v 1.8 2004/07/02 10:31:32 eradicator Exp $
 
 inherit eutils flag-o-matic
 
@@ -65,12 +65,12 @@ src_compile() {
 }
 
 src_install() {
-	make DESTDIR=${D} MANDIR=/usr/share/man ${myconf} install
+	make DESTDIR=${D} MANDIR=/usr/share/man ${myconf} install || die
 	make DESTDIR=${D} ${myconf} \
 		LIBDIR=/usr/lib \
 		MANDIR=/usr/share/man \
 		INCDIR=/usr/include \
-		install-devel
+		install-devel || die
 
 	dodoc COPYING
 	dodir /var/lib/iptables ; keepdir /var/lib/iptables
